--- a/app/assets/stylesheets/tasks/list-task.scss
+++ b/app/assets/stylesheets/tasks/list-task.scss
@@ -2,22 +2,31 @@
   .badge-custom {
     display: inline-block;
     min-width: 10px;
-    padding: 3px 7px;
+    padding: 1px 5px 0px 5px;
     font-size: 12px;
     font-weight: 700;
-    line-height: 1;
-    color: #fff;
+    line-height: 22px;
+    color: white;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
     background-color: #777;
-    border-radius: 10px;
+    border-radius: 2px;
   }
-  .completed {
+
+  .medium {
+    background-color: #f9cd48 !important;
+  }
+
+  .low {
+    background-color: #4CAF50 !important;
+  }
+
+  .high {
     background-color: #dd4b39 !important;
   }
 
-  .in-progess {
-    background-color: #f39c12 !important;
+  .urgent {
+    background-color: #ff00ff !important;
   }
 }
